fluentbit/firehose-s3/envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      # path: /dev/stdout
                      path: /var/log/envoy/access.log
                      log_format:
                        text_format: |
                          [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
                        # json_format:
                        #   authority: "%REQ(:AUTHORITY)%"
                        #   bytes_received: "%BYTES_RECEIVED%"
                        #   bytes_sent: "%BYTES_SENT%"
                        #   connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                        #   downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                        #   downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                        #   duration: "%DURATION%"
                        #   method: "%REQ(:METHOD)%"
                        #   path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        #   protocol: "%PROTOCOL%"
                        #   request_id: "%REQ(X-REQUEST-ID)%"
                        #   requested_server_name: "%REQUESTED_SERVER_NAME%"
                        #   response_code: "%RESPONSE_CODE%"
                        #   response_code_details: "%RESPONSE_CODE_DETAILS%"
                        #   response_flags: "%RESPONSE_FLAGS%"
                        #   route_name: "%ROUTE_NAME%"
                        #   start_time: "%START_TIME%"
                        #   upstream_cluster: "%UPSTREAM_CLUSTER%"
                        #   upstream_host: "%UPSTREAM_HOST%"
                        #   upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                        #   upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                        #   upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                        #   user_agent: "%REQ(USER-AGENT)%"
                        #   x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                generate_request_id: true
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          direct_response:
                            body:
                              inline_string: "Welcome to envoy!"
                            status: 200
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
